<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dialog_storage_title__text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/dialog_storage_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/internal_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/internal_text" />

        <RadioButton
            android:id="@+id/external_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/external_text" />

        <RadioButton
            android:id="@+id/internal_cache_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internal_cache_text" />

        <RadioButton
            android:id="@+id/external_cahe_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/external_cache_text" />

    </RadioGroup>

    <Button
        android:id="@+id/dialog_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_storage_ok_button_text"
        app:layout_constraintEnd_toStartOf="@+id/dialog_cancel_button"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_storage_radio_group" />

    <Button
        android:id="@+id/dialog_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dialog_cancel_ok_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/dialog_ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialog_ok_button"
        app:layout_constraintTop_toTopOf="@+id/dialog_ok_button"
        app:layout_constraintVertical_bias="0.45" />
</androidx.constraintlayout.widget.ConstraintLayout>